fix heading on mobile positioning

--- a/static/global.css
+++ b/static/global.css
@@ -206,7 +206,7 @@ h1 {
   letter-spacing: -1.5px;
   text-align: center;
   margin: 0;
-  margin-top: 0.5em;
+  margin-top: 1em;
   margin-bottom: 0.5em;
   pointer-events: none;
 }
